--- a/assignments/1/Makefile
+++ b/assignments/1/Makefile
@@ -1,7 +1,15 @@
 all: tar
 
 tar:
-	tar -cvf ccanada6_assignment_1.tar.gz .
+	rm -rf ccanada6_submission
+	mkdir ccanada6_submission
+	cp Makefile ccanada6_submission/
+	cp README.md ccanada6_submission/
+	cp Makefile ccanada6_submission/
+	cp -r part1 ccanada6_submission/
+	cp -r part2 ccanada6_submission/
+
+	tar -cvf ccanada6_assignment_1.tar.gz ccanada6_submission
 
 clean:
 	rm ccanada6_assignment_1.tar.gz
