--- a/assignments/2/Makefile
+++ b/assignments/2/Makefile
@@ -1,5 +1,15 @@
-all:
-	mpicc main.c
+all: tar
+
+tar:
+	rm -rf ccanada6_submission
+	mkdir ccanada6_submission
+	cp Makefile ccanada6_submission/
+	cp README.md ccanada6_submission/
+	cp Makefile ccanada6_submission/
+	cp -r part1 ccanada6_submission/
+	cp -r part2 ccanada6_submission/
+
+	tar -cvf ccanada6_assignment_2.tar.gz ccanada6_submission
 
 clean:
-	rm a.out
+	rm ccanada6_assignment_2.tar.gz
