working code for part2 just gotta do all the tests

--- a/assignments/2/.vscode/settings.json
+++ b/assignments/2/.vscode/settings.json
@@ -4,6 +4,7 @@
         "string_view": "c",
         "initializer_list": "c",
         "utility": "c",
-        "stddef.h": "c"
+        "stddef.h": "c",
+        "string.h": "c"
     }
 }
